# wallet

./: .env.base  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
api/: base.py  serializers.py  validators.py  viewsets.py
core/: factories.py  models.py
core/migrations/: 0001_initial.py
tests/: conftest.py
tests/api/: test_api.py
tests/core/: test_core.py
wallet/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
